fix(css)!: move text align from layout to content css files, and apply it to the two css classes that need it.

--- a/assets/css/03-layout.css
+++ b/assets/css/03-layout.css
@@ -131,7 +131,6 @@
   }
 
   main > section.md-flow > dl > dt {
-    text-align: center;
     margin: 1rem 0 0.35rem;
   }
 
