--- a/assets/css/04-components-3-content.css
+++ b/assets/css/04-components-3-content.css
@@ -138,7 +138,12 @@
      Lists
      ======================= */
 
+  :where(.md-flow) dl {
+    text-align: center;
+  }
+  
   :where(.md-flow) dl > dt {
+    text-align: center;
     font-weight: 700;
     margin-top: 1rem;
   }
